--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,21 +1,15 @@
 name: 'Install PHP Composer'
 description: 'Github Composite action to install php composer'
-inputs:
-  version:
-    description: 'version of PHP you will like to install'
-    required: true
-    default: '8.1'
+
 runs:
   using: "composite"
   steps:
-    - name: Install php
-      if: "! contains(toJSON(steps), 'php')"
+    - name: Install php composer
       run: |
         sudo apt-get update -y
-        sudo apt-get install -y php${{ inputs.version}}
-      shell: bash
-      
-    - name: print dir content
-      run: |
-        ls -la
+        curl -sS https://getcomposer.org/installer -o /tmp/composer-setup.php
+        HASH='curl -sS https://composer.github.io/installer.sig'
+        echo $HASH
+        php -r "if (hash_file('SHA384', '/tmp/composer-setup.php') === '$HASH') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
+        sudo php /tmp/composer-setup.php --install-dir=/usr/local/bin --filename=composer
       shell: bash
